# MutsukiServiceHost

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: performance.yml  platform-compat.yml
artifacts/perf/: issue12-event-driven-macos-arm64.json
artifacts/performance/reference-windows-x64/: report.analysis.json  report.approval.json  report.json
configs/: service.example.toml
configs/plugins/: external-runner.example.toml
crates/mutsuki-service-benchmarks/: Cargo.toml
crates/mutsuki-service-benchmarks/scripts/: run-reference.py
crates/mutsuki-service-benchmarks/src/: lib.rs  main.rs
crates/mutsuki-service-config/: Cargo.toml
crates/mutsuki-service-config/src/: lib.rs
crates/mutsuki-service-control/: Cargo.toml
crates/mutsuki-service-control/src/: lib.rs
crates/mutsuki-service-daemon/: Cargo.toml
crates/mutsuki-service-daemon/src/: lib.rs
crates/mutsuki-service-host/: Cargo.toml
crates/mutsuki-service-host/src/: main.rs
crates/mutsuki-service-ipc/: Cargo.toml
crates/mutsuki-service-ipc/src/: client.rs  codec.rs  error.rs  frame.rs  io.rs  lib.rs  limits.rs  server_conn.rs  session.rs  tests.rs  transport.rs
crates/mutsuki-service-link/: Cargo.toml
crates/mutsuki-service-link/src/: client.rs  lib.rs  protocol.rs  quic.rs  server.rs  tls_identity.rs  transport.rs
crates/mutsuki-service-observe/: Cargo.toml
crates/mutsuki-service-observe/src/: lib.rs
crates/mutsuki-service-plugin-conversation-sim/: Cargo.toml
crates/mutsuki-service-plugin-conversation-sim/src/: lib.rs
crates/mutsuki-service-plugin-loader/: Cargo.toml
crates/mutsuki-service-plugin-loader/src/: lib.rs
crates/mutsuki-service-plugin-terminal-tui/: Cargo.toml
crates/mutsuki-service-plugin-terminal-tui/src/: lib.rs
crates/mutsuki-service-runner-supervisor/: Cargo.toml
crates/mutsuki-service-runner-supervisor/src/: lib.rs
crates/mutsuki-service-runtime/: Cargo.toml
crates/mutsuki-service-runtime/examples/: core_driver_benchmark.rs
crates/mutsuki-service-runtime/src/: abi_plugin.rs  event_source.rs  lib.rs
crates/mutsuki-service-runtime/src/abi_plugin/: callbacks.rs  connection.rs  staging.rs  tests.rs
crates/mutsuki-service-runtime/src/abi_plugin/connection/: io.rs  v1.rs  v2.rs
crates/mutsuki-service-tui/: Cargo.toml
crates/mutsuki-service-tui/src/: lib.rs
docs/: architecture.md  config.md  control-api.md  performance-model-v1.md  plugin-loading.md  runner-supervisor.md
fixtures/abi-plugin/: Cargo.toml
fixtures/abi-plugin/src/: lib.rs
fixtures/performance/: runner-fixtures-v1.json
schemas/control-api/: v1.schema.json
schemas/service-config/: v1.schema.json
scripts/: daemon-smoke.sh
skills/config-security/: SKILL.md
skills/control-api/: SKILL.md
skills/daemon/: SKILL.md
skills/observe/: SKILL.md
skills/plugin-loader/: SKILL.md
skills/runner-supervisor/: SKILL.md
skills/runtime/: SKILL.md
