[workspace]
members = [
    "crates/mutsuki-service-config",
    "crates/mutsuki-service-plugin-loader",
    "crates/mutsuki-service-runner-supervisor",
    "crates/mutsuki-service-control",
    "crates/mutsuki-service-ipc",
    "crates/mutsuki-service-link",
    "crates/mutsuki-service-observe",
    "crates/mutsuki-service-daemon",
    "crates/mutsuki-service-runtime",
    "crates/mutsuki-service-benchmarks",
    "crates/mutsuki-service-host",
    "fixtures/abi-plugin",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
cpu-time = "1.0.0"
dirs = "6.0"
futures = "0.3"
libloading = "0.8"
plist = "1.7"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.10"
thiserror = "2.0"
tokio = { version = "1.38", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
windows-service = "0.8.1"

mutsuki-runtime-contracts = { git = "https://github.com/sena-nana/MutsukiCore.git", rev = "0e07be963aee996283d5ae702e3a8153de1e417b" }
mutsuki-runtime-core = { git = "https://github.com/sena-nana/MutsukiCore.git", rev = "0e07be963aee996283d5ae702e3a8153de1e417b" }
mutsuki-runtime-host = { git = "https://github.com/sena-nana/MutsukiCore.git", rev = "0e07be963aee996283d5ae702e3a8153de1e417b" }
mutsuki-runtime-sdk = { git = "https://github.com/sena-nana/MutsukiCore.git", rev = "0e07be963aee996283d5ae702e3a8153de1e417b" }
mutsuki-runtime-wire = { git = "https://github.com/sena-nana/MutsukiCore.git", rev = "0e07be963aee996283d5ae702e3a8153de1e417b" }

mutsuki-service-config = { path = "crates/mutsuki-service-config" }
mutsuki-service-plugin-loader = { path = "crates/mutsuki-service-plugin-loader" }
mutsuki-service-runner-supervisor = { path = "crates/mutsuki-service-runner-supervisor" }
mutsuki-service-control = { path = "crates/mutsuki-service-control" }
mutsuki-service-ipc = { path = "crates/mutsuki-service-ipc" }
mutsuki-service-link = { path = "crates/mutsuki-service-link" }
mutsuki-link-core = { git = "https://github.com/sena-nana/MutsukiLink.git", rev = "26c66311e0e90ddb28d37e886bdda699f8662439" }
mutsuki-link-local = { git = "https://github.com/sena-nana/MutsukiLink.git", rev = "26c66311e0e90ddb28d37e886bdda699f8662439" }
mutsuki-link-quic = { git = "https://github.com/sena-nana/MutsukiLink.git", rev = "26c66311e0e90ddb28d37e886bdda699f8662439" }
quinn = { version = "0.11", default-features = false, features = ["rustls-ring", "runtime-tokio"] }
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
mutsuki-service-observe = { path = "crates/mutsuki-service-observe" }
mutsuki-service-daemon = { path = "crates/mutsuki-service-daemon" }
mutsuki-service-runtime = { path = "crates/mutsuki-service-runtime" }
mutsuki-service-benchmarks = { path = "crates/mutsuki-service-benchmarks" }
