[package]
name = "mutsuki-service-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
