[package]
name = "mutsuki-service-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mutsuki-service"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
mutsuki-service-config.workspace = true
mutsuki-service-control.workspace = true
mutsuki-service-daemon.workspace = true
mutsuki-service-ipc.workspace = true
mutsuki-service-runtime.workspace = true
serde_json.workspace = true
tokio.workspace = true
