[package]
name = "mutsuki-service-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mutsuki-service-config.workspace = true
mutsuki-service-control.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
