[package]
name = "mutsuki-service-link"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MutsukiLink local control bridge for standalone WebHost consumers"

[dependencies]
mutsuki-link-core.workspace = true
mutsuki-link-local.workspace = true
mutsuki-service-control.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
