[package]
name = "mutsuki-service-plugin-conversation-sim"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mutsuki-runtime-contracts.workspace = true
mutsuki-service-control.workspace = true
mutsuki-service-plugin-loader.workspace = true
serde_json.workspace = true
