[package]
name = "mutsuki-service-plugin-loader"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mutsuki-runtime-contracts.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
