[package]
name = "mutsuki-service-plugin-terminal-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mutsuki-runtime-contracts.workspace = true
mutsuki-service-control.workspace = true
mutsuki-service-plugin-conversation-sim.workspace = true
mutsuki-service-plugin-loader.workspace = true
serde_json.workspace = true
