[package]
name = "mutsuki-service-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
futures.workspace = true
libloading.workspace = true
mutsuki-runtime-contracts.workspace = true
mutsuki-runtime-core.workspace = true
mutsuki-runtime-host.workspace = true
mutsuki-runtime-wire.workspace = true
mutsuki-runtime-sdk.workspace = true
mutsuki-service-config.workspace = true
mutsuki-service-control.workspace = true
mutsuki-service-ipc.workspace = true
mutsuki-service-link.workspace = true
mutsuki-service-observe.workspace = true
mutsuki-service-plugin-loader.workspace = true
mutsuki-service-runner-supervisor.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
cpu-time.workspace = true
mutsuki-service-abi-fixture = { path = "../../fixtures/abi-plugin" }
sha2.workspace = true
tempfile.workspace = true
toml.workspace = true
