[package]
name = "mutsuki-service-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
mutsuki-service-config.workspace = true
mutsuki-service-control.workspace = true
mutsuki-service-ipc.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
