[package]
name = "mutsuki-service-abi-fixture"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mutsuki-runtime-contracts = { git = "https://github.com/sena-nana/MutsukiCore.git", rev = "a87cd7ada380d32879d6093ffdcf934d4ef688c3" }
mutsuki-runtime-core = { git = "https://github.com/sena-nana/MutsukiCore.git", rev = "a87cd7ada380d32879d6093ffdcf934d4ef688c3" }
mutsuki-runtime-sdk = { git = "https://github.com/sena-nana/MutsukiCore.git", rev = "a87cd7ada380d32879d6093ffdcf934d4ef688c3" }
serde_json = "1.0"
