[package]
name = "mutsuki-service-abi-fixture"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mutsuki-runtime-contracts = { git = "https://github.com/sena-nana/MutsukiCore.git", rev = "2e069a77ab9a194659fd4368f9aaf90040c616ba" }
mutsuki-runtime-core = { git = "https://github.com/sena-nana/MutsukiCore.git", rev = "2e069a77ab9a194659fd4368f9aaf90040c616ba" }
mutsuki-runtime-sdk = { git = "https://github.com/sena-nana/MutsukiCore.git", rev = "2e069a77ab9a194659fd4368f9aaf90040c616ba" }
serde_json = "1.0"
